--- a/Configuration/Smart_Park.cfg
+++ b/Configuration/Smart_Park.cfg
@@ -1,4 +1,4 @@
-[gcode_macro _SMART_PARK]
+[gcode_macro SMART_PARK]
 description: Parks your printhead near the print area for pre-print hotend heating.
 gcode:
 
