--- a/Configuration/Line_Purge.cfg
+++ b/Configuration/Line_Purge.cfg
@@ -1,4 +1,4 @@
-[gcode_macro _LINE_PURGE]
+[gcode_macro LINE_PURGE]
 description: A purge macro that adapts to be near your actual printed objects
 gcode:
     # Get relevant printer params
