--- a/Configuration/Line_Purge.cfg
+++ b/Configuration/Line_Purge.cfg
@@ -136,23 +136,8 @@ gcode:
         {% endif %}
 
         SAVE_GCODE_STATE NAME=Prepurge_State                                                    # Create gcode state
-
-        {% if detect_object == 0 %}                                                             # If there is no object, purge in the middle of bed
-
-            G92 E0                                                                              # Reset extruder
-            G0 F{travel_speed}                                                                  # Set travel speed
-            G90                                                                                 # Absolute positioning
-            G0 X{(bed_x_max / 2) - (purge_amount / 2)} Y{(bed_y_max / 2)}                       # Move to purge position
-            G0 Z{purge_height}                                                                  # Move to purge Z height
-            M83                                                                                 # Relative extrusion mode
-            G1 E{tip_distance} F{purge_move_speed}                                              # Move filament tip
-            G1 X{(bed_x_max / 2) + (purge_amount / 2)} E{purge_amount} F{purge_move_speed}      # Purge line
-            {RETRACT}                                                                           # Retract
-            G0 X{(bed_x_max / 2) + (purge_amount / 2) + rapid_move} F{travel_speed}             # Rapid move to break string            G92 E0                                                                              # Reset extruder distance
-            M82                                                                                 # Absolute extrusion mode
-            G0 Z{purge_height * 2} F{travel_speed}                                              # Z hop
-
-        {% elif purge_y_origin_low > 0 %}                                                       # If there's room on Y, purge along X axis in front of print area
+        
+        {% if purge_y_origin_low > 0 %}                                                         # If there's room on Y, purge along X axis in front of print area
 
             G92 E0                                                                              # Reset extruder
             G0 F{travel_speed}                                                                  # Set travel speed
@@ -215,19 +200,18 @@ gcode:
             M82                                                                                 # Absolute extrusion mode
             G0 Z{purge_height * 2} F{travel_speed}                                              # Z hop
 
-        {% else %}                                                                              # If there's no room on X or Y, purge blob in the middle of print
+        {% else %}                                                                              # If there's room on X, purge along Y axis to the left of print area
             
             G92 E0                                                                              # Reset extruder
             G0 F{travel_speed}                                                                  # Set travel speed
             G90                                                                                 # Absolute positioning
-            G0 X{((purge_x_max + purge_x_min) / 2)} Y{((purge_y_max + purge_y_min) / 2)}        # Move to purge position
+            G0 X{purge_x_origin} Y{purge_y_center}                                              # Move to purge position
             G0 Z{purge_height}                                                                  # Move to purge Z height
             M83                                                                                 # Relative extrusion mode
             G1 E{tip_distance} F{purge_move_speed}                                              # Move filament tip
-            G1 Z{purge_blob_height} E{purge_blob_amount} F50                                    # Purge blob
-            G1 E{purge_blob_amount_2} F50
+            G1 Y{purge_y_center + purge_amount} E{purge_amount} F{purge_move_speed}             # Purge line
             {RETRACT}                                                                           # Retract
-            G0 Y{((purge_y_max + purge_y_min) / 2) + rapid_move} F{travel_speed}                # Rapid move to break string
+            G0 Y{purge_y_center + purge_amount + 10} F{travel_speed}                            # Rapid move to break string
             G92 E0                                                                              # Reset extruder distance
             M82                                                                                 # Absolute extrusion mode
             G0 Z{purge_height * 2} F{travel_speed}                                              # Z hop
