Added default case

--- a/Configuration/Line_Purge.cfg
+++ b/Configuration/Line_Purge.cfg
@@ -78,17 +78,7 @@ gcode:
             {action_respond_info("KAMP purge is not using firmware retraction, it is recommended to configure it.")}
         {% endif %}
 
-        {% if detect_object == 0 %}
-
-            {action_respond_info("No object detected!!! KAMP purge starting at {}, {} and purging {}mm of filament, requested flow rate is {}mm/s3.".format(                                                                 
-                ((bed_x_max / 2) - (purge_amount / 2)),
-                (bed_y_max / 2),
-                (purge_amount),
-                (flow_rate),
-            )) }
-
-
-        {% elif purge_y_origin_low > 0 %}
+        {% if purge_y_origin_low > 0 %}
         
             {action_respond_info("KAMP purge starting at {}, {} and purging {}mm of filament, requested flow rate is {}mm/s3.".format(                                                                 
                 (purge_x_center),
@@ -126,10 +116,10 @@ gcode:
 
         {% else %}
 
-             {action_respond_info("No space for purge line!!! MAKE SURE TO CLEAR BLOB AFTER PURGE!!! KAMP purge blob at {}, {} and purging {}mm of filament, requested flow rate is {}mm/s3.".format(                                                                 
-                ((purge_x_max + purge_x_min) / 2),
-                ((purge_y_max + purge_y_min) / 2),
-                (purge_blob_amount + purge_blob_amount_2),
+             {action_respond_info("No object detected!!! MAY NEED TO CLEAR PURGE BEFORE PRINT STARTS!!! KAMP purge starting at {}, {} and purging {}mm of filament, requested flow rate is {}mm/s3.".format(                                                                 
+                (purge_x_origin),
+                (purge_y_center),
+                (purge_amount),
                 (flow_rate),
             )) }
 
