Added no objects detected case

--- a/Configuration/Line_Purge.cfg
+++ b/Configuration/Line_Purge.cfg
@@ -67,9 +67,10 @@ gcode:
 
         {% if verbose_enable == True %}
 
-        {action_respond_info("Moving filament tip {}mms".format(                                                                 
-            (tip_distance),                                                                                      
-        )) }
+            {action_respond_info("Moving filament tip {}mms".format(                                                                 
+                (tip_distance),                                                                                      
+            )) }
+            
         {% endif %}
 
         {% if printer.firmware_retraction is defined %}
@@ -78,7 +79,16 @@ gcode:
             {action_respond_info("KAMP purge is not using firmware retraction, it is recommended to configure it.")}
         {% endif %}
 
-        {% if purge_y_origin_low > 0 %}
+        {% if detect_object == 0 %}
+
+            {action_respond_info("No object detected!!! MAY NEED TO CLEAR PURGE BEFORE PRINT STARTS!!! KAMP purge starting at {}, {} and purging {}mm of filament, requested flow rate is {}mm/s3.".format(                                                                 
+                (purge_x_origin),
+                (purge_y_center),
+                (purge_amount),
+                (flow_rate),
+            )) }
+
+        {% elif purge_y_origin_low > 0 %}
         
             {action_respond_info("KAMP purge starting at {}, {} and purging {}mm of filament, requested flow rate is {}mm/s3.".format(                                                                 
                 (purge_x_center),
@@ -116,7 +126,7 @@ gcode:
 
         {% else %}
 
-             {action_respond_info("No object detected!!! MAY NEED TO CLEAR PURGE BEFORE PRINT STARTS!!! KAMP purge starting at {}, {} and purging {}mm of filament, requested flow rate is {}mm/s3.".format(                                                                 
+            {action_respond_info("No space for purge line!!! MAKE SURE TO CLEAR BLOB AFTER PURGE!!! KAMP purge blob at {}, {} and purging {}mm of filament, requested flow rate is {}mm/s3.".format(                                                                 
                 (purge_x_origin),
                 (purge_y_center),
                 (purge_amount),
@@ -126,8 +136,24 @@ gcode:
         {% endif %}
 
         SAVE_GCODE_STATE NAME=Prepurge_State                                                    # Create gcode state
-        
-        {% if purge_y_origin_low > 0 %}                                                         # If there's room on Y, purge along X axis in front of print area
+
+        {% if detect_object == 0 %}                                                             # If there is no object, purge along Y axis to the left of print area
+
+            G92 E0                                                                              # Reset extruder
+            G0 F{travel_speed}                                                                  # Set travel speed
+            G90                                                                                 # Absolute positioning
+            G0 X{purge_x_origin} Y{purge_y_center}                                              # Move to purge position
+            G0 Z{purge_height}                                                                  # Move to purge Z height
+            M83                                                                                 # Relative extrusion mode
+            G1 E{tip_distance} F{purge_move_speed}                                              # Move filament tip
+            G1 Y{purge_y_center + purge_amount} E{purge_amount} F{purge_move_speed}             # Purge line
+            {RETRACT}                                                                           # Retract
+            G0 Y{purge_y_center + purge_amount + 10} F{travel_speed}                            # Rapid move to break string
+            G92 E0                                                                              # Reset extruder distance
+            M82                                                                                 # Absolute extrusion mode
+            G0 Z{purge_height * 2} F{travel_speed}                                              # Z hop
+
+        {% elif purge_y_origin_low > 0 %}                                                       # If there's room on Y, purge along X axis in front of print area
 
             G92 E0                                                                              # Reset extruder
             G0 F{travel_speed}                                                                  # Set travel speed
@@ -190,7 +216,7 @@ gcode:
             M82                                                                                 # Absolute extrusion mode
             G0 Z{purge_height * 2} F{travel_speed}                                              # Z hop
 
-        {% else %}                                                                              # If there's room on X, purge along Y axis to the left of print area
+        {% else %}                                                                              # If all else fails (no room), purge along Y axis to the left of print area
             
             G92 E0                                                                              # Reset extruder
             G0 F{travel_speed}                                                                  # Set travel speed
