Fixed purge origin

--- a/Configuration/Line_Purge.cfg
+++ b/Configuration/Line_Purge.cfg
@@ -51,6 +51,9 @@ gcode:
         {% set purge_y_center = (bed_y_max - (purge_amount + rapid_move)) %}
     {% endif %} 
 
+    # Ensure purge origins are within bed dimensions
+    {% set purge_x_origin = ([purge_x_origin_low, bed_x_max - purge_amount - rapid_move] | min) %}
+    {% set purge_y_origin = ([purge_y_origin_low, bed_y_max - purge_amount - rapid_move] | min) %}
     {% set purge_x_origin_low = (purge_x_min - purge_margin) %}                                         # Add margin to x min
     {% set purge_x_origin_high = (purge_x_max + purge_margin) %}                                        # Add margin to x max
     {% set purge_y_origin_low = (purge_y_min - purge_margin) %}                                         # Add margin to y min
