Fixing purge origin calculation

--- a/Configuration/Line_Purge.cfg
+++ b/Configuration/Line_Purge.cfg
@@ -52,8 +52,8 @@ gcode:
     {% endif %} 
 
     # Ensure purge origins are within bed dimensions
-    {% set purge_x_origin = ([purge_x_origin_low, bed_x_max - purge_amount - rapid_move] | min) %}
-    {% set purge_y_origin = ([purge_y_origin_low, bed_y_max - purge_amount - rapid_move] | min) %}
+    {% set purge_x_origin = ([purge_x_min - purge_margin, 0] | max) %}                                  # Add margin to x min, compare to 0, and choose the larger
+    {% set purge_y_origin = ([purge_y_min - purge_margin, 0] | max) %}                                  # Add margin to y min, compare to 0, and choose the larger
     {% set purge_x_origin_low = (purge_x_min - purge_margin) %}                                         # Add margin to x min
     {% set purge_x_origin_high = (purge_x_max + purge_margin) %}                                        # Add margin to x max
     {% set purge_y_origin_low = (purge_y_min - purge_margin) %}                                         # Add margin to y min
